--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -257,7 +257,7 @@
             android:name=".service.QuickSettingsTileForce"
             android:label="@string/qs_force_label"
             android:icon="@drawable/ic_qs_force"
-            android:exported="false"
+            android:exported="true"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
@@ -267,7 +267,7 @@
             android:name=".service.QuickSettingsTileSchedule"
             android:label="@string/qs_schedule_label"
             android:icon="@drawable/ic_qs_schedule"
-            android:exported="false"
+            android:exported="true"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
@@ -277,7 +277,7 @@
             android:name=".service.QuickSettingsTileCamera"
             android:label="@string/photo_shoot_activity_title"
             android:icon="@drawable/ic_qs_camera"
-            android:exported="false"
+            android:exported="true"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
