--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=false
 android.nonFinalResIds=false
 android.nonTransitiveRClass=false
