--- a/fdroiddata/com.github.catfriend1.syncthingandroid.yml
+++ b/fdroiddata/com.github.catfriend1.syncthingandroid.yml
@@ -2233,7 +2233,7 @@ Builds:
 
   - versionName: 1.28.0.0
     versionCode: 1280000
-    commit: 9d1dd2f93c2908c5ef35121df333490e479f9e88
+    commit: 72c3b7ead2b5427e9b57e9f093b9d461566b1653
     subdir: app
     submodules: true
     sudo:
@@ -2248,10 +2248,11 @@ Builds:
     prebuild:
       - sed -i -e '/signingConfig/,+2d' build.gradle.kts
       - sed -i -e 's/java.net.URI/uri/' ../settings.gradle.kts
-      - sed -i -e '/executable/s/python/python3/' {../syncthing,.}/build.gradle
+      - sed -i -e '/executable/s/python/python3/' build.gradle.kts
       - echo -e "\norg.gradle.jvmargs=-Xmx4096m" >> ../gradle.properties
     build:
-      - export ndkversion=$(grep "ndkVersionShared" ../build.gradle.kts | cut -d '"' -f 4)
+      - export ndkversion=$(grep "ndkVersionShared" ../build.gradle.kts | cut -d '"'
+        -f 4)
       - sdkmanager "ndk;$ndkversion"
       - export ANDROID_NDK_HOME=$$SDK$$/ndk/$ndkversion
       - gradle :syncthing:buildNative
