--- a/app/src/gplay/AndroidManifest.xml
+++ b/app/src/gplay/AndroidManifest.xml
@@ -8,10 +8,11 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" tools:node="remove"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" tools:node="merge"/>
 
-    <application tools:node="replace">
+    <application>
         <service
             android:name=".service.SyncthingService"
             android:foregroundServiceType="dataSync"
+            tools:node="replace"
             />
     </application>
 
